--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,14 @@
 name: Main Job
 
 on:
-  schedule:
-    - cron: '0 0 * * MON'
-  workflow_dispatch:
+  pull_request:
+    types: [opened]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-    - uses: actions/checkout@v2
-    - uses: c-hive/gha-yarn-cache@v2
-    - run: yarn install --frozen-lockfile
-    - run: yarn build
-    - name: Running script now
-      run: node dist
-      env:
-        SECRET_KEY: ${{ secrets.SECRET_VAL }}
+    - uses: ShaunLWM/actions-i18-coverage@latest
+      with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
